text overflow fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Amatic SC', cursive;
+  word-wrap: break-word;
 }
 html,body{
   height: 100%;
